--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -139,12 +139,4 @@
             }
         }
     }
-
-
-}
-
-.btn-group {
-    &:last-child {
-        margin-bottom: 50px;
-    }
 }
